added espn news and templating, and also moment js for easy date formatting

--- a/NancyApplication1/NancyApplication1/Content/styles.css
+++ b/NancyApplication1/NancyApplication1/Content/styles.css
@@ -328,3 +328,9 @@ ul.share-button-set li a{
 .numbered{
     list-style: decimal;
 }
+
+/*custom*/
+.nav li:hover
+{
+    background-color:#e5e5e5;
+}
