--- a/NancyApplication1/NancyApplication1/Views/index.cshtml
+++ b/NancyApplication1/NancyApplication1/Views/index.cshtml
@@ -227,11 +227,12 @@
                 </div>
                 <div class="span4">
                     <div class="box">
-                        <h4 class="box-title"><span class="orange-box-title">Recipes</span> <span class="green-box-title">Galleries</span></h4>
+                        <h4 class="box-title"><span class="orange-box-title">Quick</span> <span class="green-box-title">Quiz</span></h4>
                         <img src="asset/img/medium-1-madang.jpg">
                         <a href="galery_detail.html"><h3>Mushroom Croquette dan Country Fried Steak</h3></a>
                         <a href="#" class="btn btn-mini btn-success">Send Photo</a>
                     </div>
+                    @Html.Partial("Shared/_headlines.cshtml",null)
                     <div class="box green-gradient-box tab-widget">
                         <ul class="nav nav-tabs">
                             <li class="active"><a href="#1" data-toggle="tab"><i class="icon-star"></i>&nbsp;Popular</a></li>
@@ -288,7 +289,7 @@
                         </div>
                     </div>
                     <div class="box green-gradient-box tips">
-                        <h4 class="box-title"><span class="orange-box-title">Tips</span> <span class="green-box-title">Today</span></h4>
+                        <h4 class="box-title"><span class="orange-box-title">Pro</span> <span class="green-box-title">Tips</span></h4>
                         <a href="#"><h3>Memilih Merica Hitam </h3></a>
                         <img src="asset/img/thumb-1-madang.jpg">
                         <p>
