--- a/NancyApplication1/NancyApplication1/Views/Shared/_headlines.cshtml
+++ b/NancyApplication1/NancyApplication1/Views/Shared/_headlines.cshtml
@@ -4,8 +4,9 @@
     <h4 class="box-title"><span class="orange-box-title">Latest</span> <span class="green-box-title">News</span></h4>
         <ul class="popular">
             <li ng-repeat="headline in headlines">
-                <a href="{{headline.links.web.href}}">
-                    <h4>{{headline.title}}</h4>
+                 <img ng-show="headline.hasImages" src="{{headline.images[0].url}}" alt="{{headline.images[0].caption}}"  />
+                <a target="_blank" href="{{headline.links.web.href}}">
+                   <h4>{{headline.title}}</h4>
                 </a>
                 <span class="post-attr">Posted on {{headline.published}}</span>
             </li>
@@ -17,6 +18,11 @@
         $http.jsonp('http://api.espn.com/v1/sports/tennis/news/headlines?apikey=rxhm9zwh5yad3psw7nj8b33a&callback=JSON_CALLBACK').success(function (data) {
             for (var i in data.headlines) {
                 data.headlines[i].published = moment(data.headlines[i].published).format('MMMM Do YYYY, h:mm:ss a');
+
+                data.headlines[i].hasImages = data.headlines[i].images.length > 0 ? true : false;
+
+                var x = 1;
+
             }
 
             $scope.headlines = data.headlines;
