--- a/NancyApplication1/NancyApplication1/Views/Shared/_currentPost.cshtml
+++ b/NancyApplication1/NancyApplication1/Views/Shared/_currentPost.cshtml
@@ -1,5 +1,5 @@
 ﻿@using TT.Web.ViewModels;
-@inherits TT.Web.Core.TTRazorViewBase<BaseViewModel>
+@inherits TT.Web.Core.TTRazorViewBase<IndexViewModel>
 <div class="current-post" ng-controller="LatestPostController">
     
     <h4 class="box-title"><span class="orange-box-title">Latest</span> <span class="green-box-title">Post</span></h4>
