--- a/NancyApplication1/NancyApplication1/Views/Shared/_layout.cshtml
+++ b/NancyApplication1/NancyApplication1/Views/Shared/_layout.cshtml
@@ -13,7 +13,72 @@
     @RenderSection("Header", false)
 </head>
 <body>
+<div class="container" id="wrapper">
+            <div class="row">
+                <div class="span4">
+                    <div id="header">
+                        <div id="logo">
+                            <h1>
+                                <a href="/"><img class="logo-home" src="/Content/images/LogoColorNoText.jpeg" />Tennis Trooper</a>
+                            </h1>                           
+                        </div>
+                    </div>
+                </div>
+                <div class="span8">
+                    <div id="ads-top">
+                        <a href="#"><img src="http://placehold.it/468x60" class="pull-right"></a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Start Navigation -->
+            <div class="row">
+                <div class="span12">
+                    <div class="navbar">
+                        <div class="navbar-inner">
+                            <div class="container" style="width: auto;">
+                                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                </a>
+                                <div class="nav-collapse">
+                                    <ul class="nav">
+                                        <li><a href="/" ><i class="icon-home"></i> Home</a></li>
+                                        <li class="dropdown"><a href="strokes" class="dropdown-toggle" data-toggle="dropdown">Sroke Analysis<b class="caret"></b></a>
+                                            <ul class="dropdown-menu">
+                                                <li><a href="/strokes/forehand">Forehand</a></li>
+                                                <li class="divider"></li>
+                                                <li><a href="/strokes/backhand">Backhand</a></li>
+                                                <li class="divider"></li>
+                                                <li><a href="/strokes/serve">Serve</a></li>
+                                            </ul>
+                                        </li>
+
+                                        <li><a href="categories.html">Blog</a></li>
+                                        <li><a href="contact.html">Contact</a></li>
+                                    </ul>
+                                    <ul class="nav  pull-right">
+                                        <li class="divider-vertical"></li>
+                                        <li>
+                                            <form action="" class="navbar-search">                                                       
+                                                <input class="search-query  span2" placeholder="type a keyword" name="q" type="text">
+                                            </form>                      
+                                        </li>
+                                    </ul>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- End Navigation -->
+
     <div id="body">@RenderBody()</div>
     <div id="footer">@RenderSection("Footer", false)</div>
-    <div id="optional">@RenderSection("Optional", false)</div></body>
+    <div id="optional">@RenderSection("Optional", false)</div>
+
+</div>
+</body>
 </html>
