blob upload to azure

--- a/NancyApplication1/NancyApplication1/Content/custom.css
+++ b/NancyApplication1/NancyApplication1/Content/custom.css
@@ -2,3 +2,19 @@
 {
     width: 46px;
 }
+
+.fileupload
+{
+    float: left;
+}
+
+.selStroke
+{
+    float: left;
+    margin-left: 10px;
+}
+
+.clear, .submit
+{
+    clear: both;
+}
