--- a/NancyApplication1/NancyApplication1/Views/Shared/_layout.cshtml
+++ b/NancyApplication1/NancyApplication1/Views/Shared/_layout.cshtml
@@ -52,6 +52,8 @@
                                                 <li><a href="/strokes/backhand">Backhand</a></li>
                                                 <li class="divider"></li>
                                                 <li><a href="/strokes/serve">Serve</a></li>
+                                                <li class="divider"></li>
+                                                <li><a href="/strokes/upload">Upload Video</a></li>
                                             </ul>
                                         </li>
 
